# AOC

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
2015/: Day3.py
2018/rust/day_1/: Cargo.toml
2019/python/: int.py  tag2.py  tag5.py  tag6.py
2020/: Day10.py  Day12.py  Day2.py  Day4.py  Day5.py  Day6.py  Day8.py
Python/: Pipfile  Readme.md  main.py  pyproject.toml
Python/2015/: Day10.py  Day11.py  Day12.py  Day13.py  Day14.py  Day2.py  Day4.py  Day5.py  Day6.py  Day7.py  Day8.py  Day9.py  Readme.md  __init__.py
Python/2019/: Tag1.py  Tag3.py  Tag4.py  tag2-2.py  tag6.py  tag8.py
Python/2020/: Day1.py  Day11.py  Day12.py  Day13.py  Day3.py  Day4.py  Day7.py  Day9.py
Python/Year2016/: assembunny.py
Python/Year2019/: int.py  tag10.py  tag5.py
Python/utils/: list_tools.py  tests.py
Templates/aoc_python_day/: cookiecutter.json
rust/: Cargo.toml  token
rust/2024/Day01/src/: main.rs
rust/solution-macro/: Cargo.toml
rust/solution-macro/src/: lib.rs
rust/src/: lib.rs  main.rs  utils.rs  year_2015.rs  year_2016.rs  year_2018.rs  year_2021.rs  year_2022.rs  year_2023.rs  year_2025.rs
rust/src/utils/: types.rs
rust/src/year_2015/: day_1.rs  day_2.rs  day_3.rs  day_4.rs
rust/src/year_2016/: day_1.rs  day_2.rs  day_3.rs
rust/src/year_2018/: day_1.rs  day_2.rs  day_3.rs  day_4.rs
rust/src/year_2019/: day_1.rs  day_2.rs
rust/src/year_2021/: day_1.rs  day_2.rs  day_3.rs
rust/src/year_2022/: day_1.rs  day_2.rs
rust/src/year_2023/: day_4.rs
rust/src/year_2024/: day_1.rs
rust/src/year_2025/: day_1.rs  day_2.rs
(+442 files in other folders)
