[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.3", features = ["cargo", "env"] }
rust-crypto = "^0.2"
regex = "1.9.5"
reqwest = { version = "0.11.20", features = ["blocking", "json"] }
solution-macro = { path = "solution-macro" }
inventory = "0.3.21"